# felipebastos

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  cobrinha.yml
2023/12/08/um-bom-inicio/: index.html
2023/12/11/um-projeto/: index.html
archive/2023/: index.html
category/extensão/: index.html
category/pesquisa/: index.html
docs/: .authors.yaml  index.md
docs/posts/: uminicio.md  umprojeto.md
search/: search_index.json
